# CEIA_AndD_TP_Grupo2

./: README.md  pyproject.toml  requirements.txt
notebooks/: AndD_tp.ipynb
