[project]
name = "nyc-taxi-analysis"
version = "0.1.0"
description = "Análisis exploratorio de datos de viajes de taxi en NYC 2024 usando pandas y numpy."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jupyterlab>=4.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyarrow>=12.0.0",
    "missingno>=0.5.1",
    "statsmodels>=0.14.0"
]